tests/valid/replace/replace_linear_drop_both.facet
fn f(mut x: linear isize) -> unrestricted () {
    let old: linear isize = (replace x 10);
    (drop old);
    (drop x)
}
