tests/invalid/replace_error/replace_usage_mismatch.facet
fn f(mut target: unrestricted isize, source: linear isize) -> unrestricted isize {
    let old: unrestricted isize = (replace target source);
    old
}
